--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node ./bin/www",
     "test": "make test"
   },
   "repository": {
@@ -24,6 +25,14 @@
   },
   "homepage": "https://github.com/jedybg/babymon#readme",
   "dependencies": {
-    "node-watch": "0.4.0"
+    "node-watch": "0.4.0",
+    "body-parser": "~1.12.4",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.12.4",
+    "jade": "~1.9.2",
+    "morgan": "~1.5.3",
+    "serve-favicon": "~2.2.1",
+    "monk": "~1.0.1"
   }
 }
