--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
   },
   "homepage": "https://github.com/jedybg/babymon#readme",
   "dependencies": {
-    "node-watch": "0.4.0",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
+    "monk": "~1.0.1",
     "morgan": "~1.5.3",
+    "node-rtsp-stream": "0.0.3",
+    "node-watch": "0.4.0",
+    "rtsp-ffmpeg": "0.0.10",
     "serve-favicon": "~2.2.1",
-    "monk": "~1.0.1"
+    "socket.io": "1.4.8",
+    "ws": "1.1.1"
   }
 }
