--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node ./bin/www",
-    "test": "make test"
+    "test": "make test",
+    "browserify": "browserify lib/includes.js -o public/javascript/includes.js -d"
   },
   "repository": {
     "type": "git",
@@ -26,15 +27,20 @@
   "homepage": "https://github.com/jedybg/babymon#readme",
   "dependencies": {
     "body-parser": "~1.12.4",
+    "browserify": "13.1.0",
+    "bufferutil": "1.2.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.12.4",
+    "express": "4.12.4",
     "jade": "~1.9.2",
+    "js-yaml": "3.6.1",
     "monk": "~1.0.1",
     "morgan": "~1.5.3",
     "node-watch": "0.4.0",
     "serve-favicon": "~2.2.1",
     "socket.io": "1.4.8",
+    "socket.io-client": "1.4.8",
+    "utf-8-validate": "1.2.1",
     "ws": "1.1.1"
   }
 }
