Added live camera image

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ state_files:
   directory: ./examples/ # /tmp/
   camera_file: camera_state.txt
   mic_file: mic_state.txt
+  image_file: camera.bmp
 
 sensor:
   audio:
